# UVCAD

./: .env.example  .gitignore  BUILD.md  BUILD_WINDOWS.md  GOOGLE_DRIVE_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  QUICK_BUILD.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: README.md  build-release.yml  manual-build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: auth.rs  config.rs  sync.rs
src-tauri/src/core/: auth_manager.rs  conflict_resolver.rs  credentials.rs  file_hasher.rs  mod.rs  oauth_server.rs  sync_engine.rs
src-tauri/src/db/: migrations.rs  models.rs  schema.rs
src-tauri/src/models/: conflict.rs  file_state.rs  mod.rs  sync_profile.rs
src-tauri/src/providers/: google_drive.rs  local_fs.rs  mod.rs  samba.rs  traits.rs
src-tauri/src/utils/: crypto.rs  error.rs  keyring.rs  mod.rs
src/components/: ConflictDialog.tsx  FileList.tsx  SettingsPanel.tsx  SyncButton.tsx
src/styles/: main.css
src/types/: index.ts
