[package]
name = "uvcad"
version = "0.2.0"
edition = "2021"
authors = ["UVCAD Team"]
description = "CAD file synchronization tool for Google Drive and Samba"
license = "MIT"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "1.5", features = ["shell-open", "dialog-confirm", "dialog-message", "dialog-open", "fs-exists", "fs-read-dir", "fs-read-file", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["sync", "fs", "net", "io-util", "time", "macros"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client for Google Drive API
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# OAuth 2.0
oauth2 = "4.4"

# Database
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }

# Hashing and crypto
sha2 = "0.10"
md5 = "0.7"
hex = "0.4"
ring = "0.17"

# Credential storage
keyring = "2.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
directories = "5.0"

# Parallel processing
rayon = "1.8"

# Global state
once_cell = "1.19"

# Browser integration
open = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific dependencies if needed

[target.'cfg(target_os = "windows")'.dependencies]
# Windows specific dependencies if needed
